<resources>
    <string name="app_name">爱家在线</string>

    <!-- 登录界面-->
    <string name="login">登录</string>
    <string name="login_slogan">从此距离不再是问题</string>
    <string name="hint_username">请输入手机号</string>
    <string name="hint_identifying">请输入验证码</string>
    <string name="get_identifying">获取验证码</string>
    <string name="register">注册</string>
    <string name="null_phone_or_verification">手机号码或验证码不可为空</string>
    <string name="null_phone">手机号不可为空</string>
    <!-- 注册界面-->
    <string name="username">用户名</string>
    <string name="backlogin">返回登录?</string>
    <!-- 主页界面-->
    <string name="edit">编辑</string>
    <string name="get_location">定位查询</string>
    <string name="set_safe_area">安全区域设置</string>
    <string name="choose_photo_sd">从本地选择图片</string>
    <string name="take_photo">拍照</string>
    <string name="delete">删除</string>
    <string name="home">主页</string>
    <string name="code">邀请码</string>
    <string name="my">我的</string>
    <string name="help">帮助</string>
    <!-- 编辑界面-->
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="hint_address">请输入详细地址</string>
    <string name="save_change">保存修改</string>
    <string name="set_name">设置昵称</string>
    <string name="set_brithday">出生日期1991-1-1</string>
    <string name="cancel">取消</string>
    <string name="submit">确定</string>
    <!-- 添加界面-->
    <string name="add_submit">确定添加</string>
    <string name="add_member">添加成员</string>
    <string name="back">返回</string>
    <string name="pay_style">手机话费托收（电信用户）</string>
    <string name="phote_style">终端类型</string>
    <!-- 设置安全区界面-->
    <string name="set_safe_space">设置安全范围</string>
    <string name="set_place">设置目标地点</string>
    <string name="title">标题</string>
    <string name="safe_area">安全区域</string>
    <!-- 邀请码-->
    <string name="code_edit">请输入邀请码:</string>
    <!-- 我的界面-->
    <string name="monitor">共享关系</string>
    <string name="user_statue">账户类型</string>
    <string name="pay">订购</string>
    <string name="about">关于</string>
    <string name="exit">退出登录</string>
    <!-- 订购界面-->
    <string name="duration">业务选项</string>
    <string name="pay_escrow">使用第三方平台支付</string>
    <string name="submit_pay">付款</string>
    <string name="queren">确认</string>
    <!-- 监控请求列表界面-->
    <string name="monitor_request_list">监控请求列表</string>
    <string name="notification">获取位置信息</string>
    <string name="_calling_number_null">呼叫号码为空号</string>
    <string name="_calling_cannot_dial_self">无法呼叫自己的分机号</string>
    <string name="net_cannot_use">网络连接不可用,请检查网络设置</string>
    <string name="unLogin">尚未登录,请从设置中退出,重新打开应用</string>
    <string name="exception_parse_data" >日期转换出错</string>
    <string name="str_today">今天</string>
    <string name="str_tomorrow">明天</string>
    <string name="exception_clear_thread">工作线程释放出错</string>
    <string name="_calling">正在通话中</string>
    <string name="_calling_invite">呼叫邀请中</string>
    <string name="_calling_accept">接受</string>
    <string name="_calling_refused">拒绝</string>
    <string name="_calling_end">结束通话</string>
    <string name="tips_saveprocess">正在保存...</string>
    <string name="tips_loadprocess">正在加载...</string>
    <string name="tips_send">正在发送...</string>
    <string name="tips_saveok">保存成功</string>
    <string name="tips_saveerror">保存失败</string>

    <string name="_calling_mute">静音</string>
    <string name="_calling_hangup">结束</string>
    <string name="_calling_exit">退出</string>
    <string name="_calling_speaker">扬声器</string>
    <string name="login_tips">天翼VV 中国好视听</string>
    <string name="login_tianyi">天翼帐号</string>
    <string name="login_weibo">新浪微博</string>
    <string name="_call_record_del">删除通话记录</string>
    <string name="_call_group_record_del">删除群组通话记录</string>
    <string name="_activity_group_none">暂无群组信息</string>
    <string name="_activity_group_add_member_to_group_none">暂无可添加此联系人的群组</string>
    <string name="dialog_exit">您确定要退出程序吗？</string>
    <string name="dialog_kickoff">您已被踢下线</string>
    <string name="processing">数据存储中</string>
    <string name="tips_loginprocess">正在登陆，请稍后</string>
</resources>
