<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#00ffffff"
    >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/x19"
        android:layout_marginRight="@dimen/x19"
        android:background="@drawable/bg_edit_edit"
        android:orientation="vertical">

        <Button
            android:id="@+id/choose_photo_sd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_edit"
            android:text="@string/choose_photo_sd" />

        <Button
            android:id="@+id/take_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_edit"
            android:text="@string/take_photo" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edit_edit"
            android:text="@string/cancel" />
    </LinearLayout>
</RelativeLayout>