<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#49B754"
    tools:context="com.jiedu.project.lovefamily.activity.PayActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        >

    </LinearLayout>
    <LinearLayout
        android:id="@+id/title_layout"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/y38"
        android:orientation="horizontal"
        android:background="#49B754"
        >
        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/x28"
            android:layout_height="@dimen/y28"
            android:paddingLeft="@dimen/x15"
            android:paddingTop="@dimen/x8"
            android:paddingBottom="@dimen/y8"
            android:src="@drawable/back_mark"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center"
            android:textColor="#fff"
            android:textSize="@dimen/x13"
            android:text="@string/pay"
            />
        <ImageView
            android:layout_width="@dimen/x36"
            android:layout_height="@dimen/y36"
            android:padding="@dimen/x9"
            android:layout_gravity="center_vertical"
            />
    </LinearLayout>

<TextView
    android:layout_width="match_parent"
    android:layout_height="@dimen/y38"
    android:layout_below="@id/title_layout"
    android:gravity="center_vertical"
    android:paddingLeft="@dimen/x11"
    android:textSize="@dimen/x12"
    android:text="@string/pay_escrow"
    />
    <TextView
        android:visibility="invisible"
        android:id="@+id/pay_num"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/y38"
        android:layout_below="@id/title_layout"
        android:layout_alignParentRight="true"
        android:text="150"
        android:gravity="center"
        android:paddingRight="@dimen/x11"
        android:textColor="#f00"
        />

    <ListView
        android:id="@+id/pay_choose"
        android:layout_below="@id/pay_num"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/x11"
        android:layout_marginRight="@dimen/y11"
        android:choiceMode="singleChoice"
        android:layout_height="@dimen/y146"
        ></ListView>


    <TextView
        android:id="@+id/duration"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y38"
        android:layout_below="@id/pay_choose"
        android:layout_marginLeft="@dimen/x11"
        android:textSize="@dimen/x12"
        android:text="@string/duration"
        android:gravity="center_vertical"
        />
    <ListView
        android:id="@+id/style_choose"
        android:layout_width="match_parent"
        android:layout_height="@dimen/y113"
        android:choiceMode="singleChoice"
        android:layout_below="@id/duration"
        >
    </ListView>
    <Button
        android:id="@+id/submit_pay"
        android:layout_width="@dimen/x259"
        android:layout_height="@dimen/y34"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:text="@string/queren"
        android:textColor="#fff"
        android:textSize="@dimen/x14"
        android:layout_marginBottom="@dimen/y8"
        android:background="#49B754"
        />
</RelativeLayout>
