<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentRelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    >

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_marginTopPercent="10%"
        app:layout_marginLeftPercent="40%"
        app:layout_marginRightPercent="40%"
        app:layout_heightPercent="15%"
        app:layout_widthPercent="20%"
        android:src="@mipmap/denglulogo"
        />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_heightPercent="42%"
        app:layout_widthPercent="100%"
        app:layout_marginTopPercent="39%"
        android:visibility="gone"

        />
    <EditText
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_marginTopPercent="38%"
        app:layout_heightPercent="6%"
        app:layout_widthPercent="65%"
        app:layout_marginLeftPercent="16%"
        android:gravity="center_vertical"
        android:inputType="phone"
        android:paddingLeft="40dp"
        android:hint="@string/hint_username"
        android:background="@drawable/round_style"
        />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@mipmap/denglu1"
        android:layout_alignTop="@id/phone"
        app:layout_marginLeftPercent="16%"
        android:layout_alignBottom="@id/phone"
        />
    <EditText
        android:id="@+id/verification"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_marginTopPercent="48%"
        app:layout_heightPercent="6%"
        app:layout_widthPercent="65%"
        app:layout_marginLeftPercent="16%"
        android:paddingLeft="40dp"
        android:inputType="number"
        android:gravity="center_vertical"
        android:hint="@string/hint_identifying"
        android:background="@drawable/round_style"
        />
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@mipmap/denglu2"
        android:layout_alignTop="@id/verification"
        app:layout_marginLeftPercent="15%"
        android:layout_alignBottom="@id/verification"
        />
    <Button
        android:id="@+id/sen_verification"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_marginTopPercent="48%"
        app:layout_widthPercent="22%"
        app:layout_heightPercent="6%"

        android:textColor="#fff"
        app:layout_marginLeftPercent="60%"
        android:textSize="@dimen/x11"
        android:gravity="center"
        android:background="@mipmap/denglu3"

        />


    <Button
        android:id="@+id/login"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_marginBottomPercent="10%"
        app:layout_heightPercent="7%"
        app:layout_widthPercent="66%"
        app:layout_marginLeftPercent="16%"
        android:gravity="center"
        android:background="@drawable/bg_save_button"

        android:layout_alignParentBottom="true"
        android:text="@string/login"
        android:textColor="#fff"
        android:textSize="25sp"

        />
    <TextView
        android:id="@+id/to_register"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_marginBottomPercent="19%"
        app:layout_heightPercent="6%"
        app:layout_widthPercent="66%"
        android:visibility="gone"
        app:layout_marginLeftPercent="18%"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:background="#00ffffff"
        />
</android.support.percent.PercentRelativeLayout>
